<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/aboutToolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:theme="@style/ToolBarStyle"
      app:title="About"
      app:popupTheme="@style/ToolBarPopupStyle"
      />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.134"
      app:srcCompat="@mipmap/ic_launcher_round"
      />
  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/app_name"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      android:textSize="32sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      />
  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_inventor"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@+id/textView3"
      app:layout_constraintTop_toTopOf="@+id/textView7"
      />
  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/about_developed"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@+id/textView8"
      app:layout_constraintTop_toTopOf="@+id/textView8"
      />
  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/about_patient"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@+id/textView9"
      app:layout_constraintTop_toTopOf="@+id/textView9"
      />
  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:text="@string/about_inventor_name"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      />
  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:maxLines="2"
      android:text="@string/about_developed_name"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@+id/textView7"
      app:layout_constraintTop_toBottomOf="@+id/textView7"
      />
  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/about_patient_name"
      android:textColor="@color/about_text"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@+id/textView8"
      app:layout_constraintTop_toBottomOf="@+id/textView8"
      />
</android.support.constraint.ConstraintLayout>