<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_confirmation"
    >

  <View
      android:id="@+id/view2"
      android:layout_width="0dp"
      android:layout_height="2dp"
      android:layout_marginBottom="48dp"
      android:layout_marginTop="1dp"
      android:background="@color/colorConfirmationView"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dialogPatientIdEd"
      />

  <View
      android:id="@+id/view3"
      android:layout_width="2dp"
      android:layout_height="48dp"
      android:background="@color/colorConfirmationView"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/enter_patient_id"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/dialogPatientOk"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/view3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/view3"
      />

  <View
      android:id="@+id/dialogPatientCancel"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/dialogPatientOk"
      app:layout_constraintTop_toTopOf="@+id/view3"
      />

  <TextView
      android:id="@+id/textYes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/ok"
      android:textColor="@android:color/holo_green_light"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/view3"
      app:layout_constraintStart_toStartOf="parent"
      />
  <TextView
      android:id="@+id/textCancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/cancel"
      android:textColor="@color/colorRightPanelButtonRed"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/view3"
      />
  <EditText
      android:id="@+id/dialogPatientIdEd"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:text=""
      android:inputType="textPersonName"
      android:maxLines="1"
      android:textSize="18sp"
      app:layout_constraintBottom_toTopOf="@+id/view2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      />

</android.support.constraint.ConstraintLayout>